Fix spacing on small screens

--- a/index.css
+++ b/index.css
@@ -974,7 +974,8 @@ body {
     
             & .image-container {
                 width: 100%;
-                margin-top: 0;
+                margin-top: 32px;
+                margin-bottom: 32px;
                 
                 & .image {
                     margin-top: 0;
@@ -986,8 +987,8 @@ body {
     
             & .image-container {
                 width: 100%;
-                margin-top: 0;
-                margin-bottom: 0;
+                margin-top: 32px;
+                margin-bottom: 32px;
     
                 & .image {
                 }
